--- a/Java/L01/estudiantes/src/main/resources/application.properties
+++ b/Java/L01/estudiantes/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# Conexion mysql
 
+spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes
+spring.datasource.username=root
+spring.datasource.password=asdqweqwe
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
