--- a/Java/L01/estudiantes/src/main/resources/application.properties
+++ b/Java/L01/estudiantes/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes
 spring.datasource.username=root
 spring.datasource.password=asdqweqwe
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Evitar que se cree el esquema nuevamente
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+# Desactivar tomcat
+spring.main-web-application-type=none
