--- a/Java/L01/estudiantes/pom.xml
+++ b/Java/L01/estudiantes/pom.xml
@@ -53,6 +53,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>exec-maven-plugin</artifactId>
+		        <version>1.6.0</version>
+		        <configuration>
+			        <mainClass>utn.estudiantes.EstudiantesApplication</mainClass>
+		        </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
